--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravellegends/pt-br-validator": "^11.0"
+        "laravellegends/pt-br-validator": "^11.0",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
